--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,7 @@ Temporary Items
 
 .idea/workspace.xml
 Backend_project/views/s.html
-.idea/workspace.xml
-.idea/workspace.xml
+workspace.xml
 Backend_project/data/db/local.0
 Backend_project/data/db/local.ns
 Backend_project/data/db/mongod.lock
