--- a/Backend_project/package.json
+++ b/Backend_project/package.json
@@ -22,7 +22,10 @@
     "include-all": "^0.1.6",
     "rc": "~0.5.0",
     "sails": "~0.10.5",
-    "sails-disk": "~0.10.0"
+    "sails-disk": "~0.10.0",
+    "sails-mongo": "0.10.4",
+    "barrels": "1.3.0",
+    "should":"4.3.0"
   },
   "scripts": {
     "start": "node app.js",
