--- a/Backend_project/package.json
+++ b/Backend_project/package.json
@@ -25,7 +25,10 @@
     "sails-disk": "~0.10.0",
     "sails-mongo": "0.10.4",
     "barrels": "1.3.0",
-    "should":"4.3.0"
+    "should":"4.3.0",
+    "passport": "~0.1.16",
+    "passport-local": "~0.1.6",
+    "bcrypt": "~0.7.6"
   },
   "scripts": {
     "start": "node app.js",
